[package]
name = "dock_sprout"
version = "1.0.1"
edition = "2021"
authors = ["Jason Thompson <jason@jasonthompson.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Thompson-Jason/DockSprout"
description = """
Rust CLI tool to bring up or down multiple docker-compose files from a parent directory.
"""
categories = ["command-line-utilities"]
keywords = ["docker", "docker-compose"]
homepage = "https://github.com/Thompson-Jason/DockSprout"

[[bin]]
name = "sprout"
path = "src/main.rs"

[dependencies]
gumdrop = "0.8.1"
ignore = "0.4.23"
indicatif = "0.17.11"
walkdir = "2.4.0"

[dev-dependencies]
tempfile = "3.16.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
